crates/aiy/src/client_ptb/snapshots/aiy__client_ptb__parser__tests__parse_mvr_names_valid.snap
---
source: crates/aiy/src/client_ptb/parser.rs
expression: parsed
---
[
    Spanned {
        span: Span {
            start: 0,
            end: 1,
        },
        value: Named(
            "@1/foo",
        ),
    },
    Spanned {
        span: Span {
            start: 0,
            end: 3,
        },
        value: Named(
            "1.aiy/foo",
        ),
    },
    Spanned {
        span: Span {
            start: 0,
            end: 3,
        },
        value: Named(
            "1.aiy/foo/1",
        ),
    },
    Spanned {
        span: Span {
            start: 0,
            end: 3,
        },
        value: Named(
            "1.aiy/3/1",
        ),
    },
    Spanned {
        span: Span {
            start: 0,
            end: 1,
        },
        value: Named(
            "1.aiy/3/1",
        ),
    },
    Spanned {
        span: Span {
            start: 0,
            end: 1,
        },
        value: Named(
            "@foo/bar",
        ),
    },
    Spanned {
        span: Span {
            start: 0,
            end: 1,
        },
        value: Named(
            "@foo/bar/1",
        ),
    },
    Spanned {
        span: Span {
            start: 0,
            end: 3,
        },
        value: Named(
            "foo.aiy/bar",
        ),
    },
    Spanned {
        span: Span {
            start: 0,
            end: 3,
        },
        value: Named(
            "foo.aiy/bar/1",
        ),
    },
]
